Bug 108110 - FILEOPEN DOCX: Line chart custom data label positioning not imported
Summary: FILEOPEN DOCX: Line chart custom data label positioning not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.0.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Chart Chart-Labels
  Show dependency treegraph
 
Reported: 2017-05-26 10:02 UTC by Gabor Kelemen (Collabora)
Modified: 2020-02-29 19:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file resaved from LO 5.4beta1 (9.14 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-05-26 10:02 UTC, Gabor Kelemen (Collabora)
Details
Data label positions in the original file, Excel 2013 and LO 5.4beta1 side by side (159.54 KB, image/png)
2017-05-26 10:03 UTC, Gabor Kelemen (Collabora)
Details
The saved file in Excel 2013 and LO 5.4beta1 side by side (163.38 KB, image/png)
2017-05-26 10:05 UTC, Gabor Kelemen (Collabora)
Details
Example file with line chart and custom label positions (24.23 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-02-25 08:24 UTC, NISZ LibreOffice Team
Details
The example file in Word and Writer (94.51 KB, image/png)
2020-02-25 08:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-05-26 10:02:07 UTC
Created attachment 133607 [details]
Example file resaved from LO 5.4beta1

The attachment 133603 [details] has custom label positions around the blue line. 

These are displayed correctly on opening the file, but are not retained on saving the file.
Comment 1 Gabor Kelemen (Collabora) 2017-05-26 10:03:02 UTC
Created attachment 133608 [details]
Data label positions in the original file, Excel 2013 and LO 5.4beta1 side by side

This looks correct.
Comment 2 Gabor Kelemen (Collabora) 2017-05-26 10:05:07 UTC
Created attachment 133610 [details]
The saved file in Excel 2013 and LO 5.4beta1 side by side

Custom positions are lost, all is reset to right alignment, which was set in the original file. Positioning is consistent between the office suites.
Comment 3 Shinji Enoki 2017-05-28 08:49:11 UTC
I was reproduced in the following environment.

Steps to Reproduce
1. Open file: "attachment 133603 [details]"
2. File save xlsx format (e.g. menu [File]-[Save As...])
3. Open step2 save file

OS: Debian jessie x86-64
Version: 5.5.0.0.alpha0+
Build ID: 9ad56da72a79a2d649755a0ab98bd53f238db08b
CPU threads: 4; OS: Linux 3.16; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-05-27_23:12:59
Locale: en-US (ja_JP.utf8); Calc: group

OS: Debian jessie x86-64
Version: 5.3.3.2
Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; VCL: gtk2; Layout Engine: new; 
Locale: en-US (ja_JP.utf8); Calc: group
Comment 4 QA Administrators 2018-06-16 02:46:04 UTC Comment hidden (obsolete)
Comment 5 NISZ LibreOffice Team 2020-02-25 08:24:13 UTC
Created attachment 158166 [details]
Example file with line chart and custom label positions

Modifying bugdoc: xlsx works now, docx still does not.

Also: more obvious custom positioning.
Comment 6 NISZ LibreOffice Team 2020-02-25 08:25:06 UTC
Created attachment 158167 [details]
The example file in Word and Writer
Comment 7 Commit Notification 2020-02-27 15:57:37 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2a00d51150d410110602c953b3c3895debfcaa98

tdf#108110 ODF chart: import/export of custom position of data point labels

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.