tdf#108110 Chart Import/Export custom position of data point labels

In order to make the DOCX import work, we have to support the
custom position of data point in the odf structure. So this commit
also fix the ODF import and export of data point labels with custom
position.

Two new XML token are added (loext:custom-label-pos-x and loext:custom-label-pos-y),
which currently refers to an attribute of the chart:data-point tag.

Note: unfortunatelly we cannot use the svg:x and svg:y attribute because these tags
are specified the horizontal/vertical distance of the upper left corner.

Change-Id: I985ce27cb6ce988948258d9eab0de13d01c72b97