include/xmloff/xmltoken.hxx
@@ -539,6 +539,8 @@ namespace xmloff { namespace token {
         XML_CUSTOM_ICONSET_INDEX,
         XML_CUSTOM_ICONSET_NAME,
         XML_CUSTOM_LABEL_FIELD,
+        XML_CUSTOM_LABEL_POS_X,
+        XML_CUSTOM_LABEL_POS_Y,
         XML_CUT,
         XML_CUT_OFFS,
         XML_CUT_OFFS2,
